@@ -1,0 +1,5 @@
+<?php
+return array(
+    'Cannot get model table foreign key.' => 'Не возможно определить индекс таблицы.',
+    'Attributes are required to build find criteria.' => 'Для поиска не указаны обязательные параметры.',
+);
