@@ -1,0 +1,4 @@
+<?php
+return array (
+    'Status "{status}" is not allowed.' => 'Статус "{status}" не поддерживается.',
+);
