@@ -1,3 +1,8 @@
+next
+[-] Remove method for translate status. Now used Yii:t
+[*] All private methods and properties transform in protected.
+[+] Add magic method __toString() to get status.
+
 0.4
 [-] Remove getStatusName method.
 [*] Add param to prevent translating in getStatuses and getStatusText methods.
